Adding Cookies Soon In Extestion

--- a/popup.html
+++ b/popup.html
@@ -8,5 +8,9 @@ Welcome To QuickResource,  A faster Way To Travel The Web And Save Bookmark Stor
 <small> This Project Was Inprised by <a href="https://www.github.com/vutondesign/SimplePick/">Vuton Design</a>
 This Project Is Maintined by <a href="https://github.com/Redmangospros/QuickResource">Redmangospros</a> and Hosted by 
 <a href="https://www.github.com">github and <a href="https://github.com/NetrounXL">NetrounXL</a></a </small>
+  <div class="message  change-message--on-load  hide--second">
+  <p>This message is displayed only the first time you visit this page. Refresh your page to hide it!</p>
+  <p>This is shown only after the previous message was shown in the last visit. Even when you refresh the page, the browser remembers your option.</p>
+</div>
 </body>
 </html>
